Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19260

Cursor cannot be placed between letters f and i - "fi" is interpreted as one character

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.4
    • 4.7.3
    • GUI: Text handling
    • None
    • 29a6523dd8d3fac9be198c73153691c6dcdb3b21, d80949eee06ff464d58bd97a6c89bae7e961f3c8, e5f38bb543696813a70995c90cd5450602c0356c, 7214d84f3296a05e6db09f0ed12702b21c3fcb30,

      PRECONDITIONS:
      Nokia Pure Font in use

      STEPS LEADING TO PROBLEM:
      1. Type to any text field (e.g. Notes, Browser)
      2. Type "fi" (i.e. lowercase f and i)
      3. Try to place the cursor in between the letters, either by tapping or with
      magnifier

      EXPECTED OUTCOME:
      Cursor would move between f and i in same way as it moves between any other
      letters.

      ACTUAL OUTCOME:
      For some reason, "fi" is interpreted as one character and it's impossible to
      place the cursor in between these letters. (Note: If you change the font e.g.
      when using Notes, this problem doesn't appear.)

      Small test app showing the problem attached. It seems that the problem can be reproduced with default font.

        1. fiibug.tar.gz
          10 kB
        2. ligature.tar.gz
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jiang Jiang Jiang
            tetoivol Tero Toivola (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes