tests/auto/qtextlayout/tst_qtextlayout.cpp
@@ -128,6 +128,7 @@ private slots:
     void textWidthWithStackedTextEngine();
     void textWidthWithLineSeparator();
     void cursorInLigatureWithMultipleLines();
+    void xToCursorForLigatures();
 
 private:
     QFont testFont;
@@ -1475,6 +1476,30 @@ void tst_QTextLayout::cursorInLigatureWithMultipleLines()
 
     // The second line will be "finish", with "fi" as a ligature
     QVERIFY(line.cursorToX(0) != line.cursorToX(1));
+}
+
+void tst_QTextLayout::xToCursorForLigatures()
+{
+#if !defined(Q_WS_MAC)
+    QSKIP("This test can not be run on Mac", SkipAll);
+#endif
+    QTextLayout layout("fi", QFont("Times", 20));
+    layout.beginLayout();
+    QTextLine line = layout.createLine();
+    layout.endLayout();
+
+    QVERIFY(line.xToCursor(0) != line.xToCursor(line.naturalTextWidth() / 2));
+
+    // U+0061 U+0308
+    QTextLayout layout2(QString::fromUtf8("\x61\xCC\x88"), QFont("Times", 20));
+
+    layout2.beginLayout();
+    line = layout2.createLine();
+    layout2.endLayout();
+
+    qreal width = line.naturalTextWidth();
+    QVERIFY(line.xToCursor(0) == line.xToCursor(width / 2) ||
+            line.xToCursor(width) == line.xToCursor(width / 2));
 }
 
 QTEST_MAIN(tst_QTextLayout)
